# computer_vision

./: .gitignore
assignment_four/: CMakeLists.txt
assignment_four/src/: histogram.cpp  kmeans_segmentation.cpp  thresholding.cpp
assignment_one/: CMakeLists.txt
assignment_one/canny_edge_detector/: CMakeLists.txt  README.txt
assignment_one/canny_edge_detector/src/: application.cpp  canny_edge_detector.cpp
assignment_one/gaussian_pyramid/: CMakeLists.txt  README.txt
assignment_one/gaussian_pyramid/include/: gaussian_pyramid.hpp
assignment_one/gaussian_pyramid/src/: application.cpp  g_pyramid.cpp  gaussian_pyramid.cpp  main.cpp
assignment_one/gaussian_pyramid/test/: tests.cpp
assignment_one/hough_transform/: CMakeLists.txt  README.txt
assignment_one/hough_transform/src/: application.cpp  hough_transform.cpp  hough_transform.hpp
assignment_three/: CMakeLists.txt
assignment_three/src/: application.cpp
assignment_two/: CMakeLists.txt
assignment_two/harris_corner_feature_tracking/: CMakeLists.txt  README.txt
assignment_two/harris_corner_feature_tracking/src/: application.cpp
assignment_two/multi_view/: CMakeLists.txt
assignment_two/multi_view/src/: application.cpp  application.cpp~  harris_corner_detector.cpp
assignment_two/optical_flow/: CMakeLists.txt  README.txt
assignment_two/optical_flow/src/: application.cpp  optical_flow.hpp
